--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -17,6 +17,7 @@ python-dotenv = "^0.10.1"
 ipython = "^7.2"
 pyyaml = "^3.13"
 voluptuous = "^0.11.5"
+pymysql = "^0.9.3"
 
 
 [tool.poetry.dev-dependencies]
