--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -15,7 +15,7 @@ flask_migrate = "^2.3"
 mypy_extensions = "^0.4.1"
 python-dotenv = "^0.10.1"
 ipython = "^7.2"
-pyyaml = "^3.13"
+pyyml = '^5.3.1'
 voluptuous = "^0.11.5"
 pymysql = "^0.9.3"
 
